[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/characters/Player.png" type="Texture" id=1]
[ext_resource path="res://scn/instances/Player.gd" type="Script" id=2]
[ext_resource path="res://scn/instances/Katana.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "Slash"
length = 0.3
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.05, 0, 0, 0.05, 135, -0.0491911, -54.6026, 0.02, 22.2002, 135, -0.06273, 63.0002, 0.0491056, -49.3172, 0, -0.05, 0, 0.05, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 )
}

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Weapon")
anims/RESET = SubResource( 1 )
anims/Slash = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, 0, -12, -24, -12, -40, -8, -60, 8, -60, 12, -40, 12, -24, 8, 0 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 0, -28 )

[node name="Katana" parent="Weapon" instance=ExtResource( 3 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
